# board-game-factory

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
bgfactory/: ff.py
bgfactory/common/: config.py  profiler.py
bgfactory/components/: cairo_helpers.py  card_sheet.py  component.py  pango_helpers.py  regular_polygon.py  shape.py  text.py  utils.py
bgfactory/components/layout/: horizontal_flow_layout.py  layout_manager.py  vertical_flow_layout.py
examples/: 01_basics.py  02_containers_and_shapes.py  03_text_and_alignment.py  04_layout_and_infer_size.py  05_making_your_own_component.py  06_preparing_for_print.py
src/bgfactory/: bgf.py  card_sheet.py  ff.py  generate_cards.py  season_card.py
src/bgfactory/common/: config.py
src/bgfactory/components/: cairo_helpers.py  card_sheet.py  component.py  constants.py  grid.py  layout_manager.py  pango_helpers.py  regular_polygon.py  shape.py  shapes.py  source.py  text.py  transformations.py  utils.py
src/bgfactory/components/layout/: absolute_layout.py  horizontal_flow_layout.py  vertical_flow_layout.py
src/bgfactory/pil_patch/: rounded_rectangle.py
src/tests/: generate_reference.py  test_grid.py  test_horizontal_flow_layout2.py  test_regular_polygon.py  test_text_alignment.py  test_text_markup.py  test_text_uniform.py  test_vertical_flow_layout.py  test_vertical_flow_layout2.py  utils.py  vertical_flow_layout_test.py
tests/: test_grid.py  test_horizontal_flow_layout2.py  test_regular_polygon.py  test_text_uniform.py  test_vertical_flow_layout2.py  utils.py
