[metadata]
name = board-game-factory
version = 0.2.1
author = Adam Volný
author_email = adam.volny@gmail.com
description = Board Game Factory - a framework for creating and scaling up production of  vector graphics assets, e.g. for board games.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avolny/board-game-factory
project_urls =
    Bug Tracker = https://github.com/avolny/board-game-factory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics

[options]
packages =
    bgfactory
    bgfactory.common
    bgfactory.components
    bgfactory.components.layout
    tests
    
python_requires = >=3.6
install_requires =
    pangocairocffi
    cairocffi
    pangocffi
    pillow
    numpy
test_suite = tests